<resources>
    <string name="app_name">JanPro</string>
    <string name="app_description">Cleaning professional</string>
    <string name="label_qr_code_reading">Point to QR Code</string>
    <string name="bt_read_qr_code">Read QR Code</string>
    <string name="cleaning_status_running">Running</string>
    <string name="cleaning_status_finished">Done</string>
    <string name="title_activity_cleaning_progress">Cleaning Progress</string>
    <string name="bt_finish_cleaning_label">Finish</string>
    <string name="label_no_cleanings_today">No cleanings realized today. Click on the Read QR code and start cleaning.</string>
    <string name="cleaning_finished_message">Cleaning Finished</string>
    <string name="cleaning_canceled_message">Cleaning Canceled</string>
    <string name="bt_cancel_cleaning">Cancel</string>
    <string name="qr_code_recognized_message">Department Recognized</string>
    <string name="qr_code_not_recognized_message">Invalid QR Code</string>
    <string name="label_cleaning_start">Started at: %1$s</string>
    <string name="msg_issue_report">*Issue Report* \nDepartment: %1$s</string>
    <string name="msg_issue_report_no_department">*Issue Report* \n</string>
    <string name="action_open_whatsapp">Open WhatsApp</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="minutes_units">minutes</string>

    <string name="menu_report_issue">Report an issue</string>
    <string name="error_unexpected">An error occurred, contact the support</string>
    <string name="error_network">An network error occurred, try again later</string>
    <string name="menu_call_manager">Call manager</string>
    <string name="menu_finish_cleaning">Finish Cleaning</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_login">Login</string>
    <string name="str_login_id">login</string>
    <string name="str_login_pass">Password</string>
    <string name="str_bt_do_login">Login</string>
    <string name="str_login_logo">Logo image</string>
    <string name="title_activity_about">About</string>
    <string name="cd_company_logo">Company logo</string>
    <string name="cd_new_cleaning_icon">New cleaning icon</string>
    <string name="label_about_name">Name:</string>
    <string name="about_app_name_value" translatable="false">YouDo - Cleaning</string>
    <string name="label_about_version">Version:</string>
    <string name="about_version_value" translatable="false">1.0</string>
    <string name="label_about_description">Description:</string>
    <string name="about_description_value">This app has been developed for helping cleaning companies register the cleaned departments.</string>
    <string name="label_about_usage">Usage:</string>
    <string name="about_usage_value">When arrives on the department for cleaning read the QR Code and start cleaning. Your working time will be recorded automatically. When finish click in finish button(on screen or widget).</string>
    <string name="label_about_widget">Widget:</string>
    <string name="about_widget_value">You can start the cleaning using the widget, just click on it. You can also finish it by clicking in finish from widget.</string>
    <string name="cd_banner_image">Banner image</string>
    <string name="tv_forget_password"><u>Forget my password</u></string>
    <string name="msg_invalid_email">Invalid email</string>
    <string name="msg_email_sent">A message has been sent to your email</string>
    <string name="msg_no_cleaning_progress">No cleanings in progress</string>
    <string name="title_activity_settings">Settings</string>
    <string name="label_widget">New cleaning</string>
    <string name="label_widget_cleaning_progress">Cleaning in progress</string>
    <string name="label_close_app">Close app</string>
    <string name="label_close_app_description">Really wants exit?</string>

    <!-- Preference Titles -->
    <string name="sounds_preferences">Sounds</string>

    <!-- Preference Keys -->
    <string name="key_pref_sound" translatable="false">key_sound</string>

    <!-- Sync Preferences -->
    <string name="sound_qr_code">Sound when read QR Code</string>
    <string name="sound_qr_code_summary_on">Emits a beep after read QR Code</string>
    <string name="sound_qr_code_summary_off">Disable sound when read QR Code</string>
    <string name="menu_settings">Settings</string>

</resources>
