<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        app:showAsAction="never"
        android:title="@string/menu_report_issue"
        android:id="@+id/menu_report_issue" />
    <item
        app:showAsAction="never"
        android:title="@string/menu_call_manager"
        android:id="@+id/menu_call_manager" />
    <item
        app:showAsAction="never"
        android:title="@string/menu_finish_cleaning"
        android:id="@+id/menu_finish_cleaning" />

    <item
        app:showAsAction="never"
        android:title="@string/menu_settings"
        android:id="@+id/menu_settings" />

    <item
        app:showAsAction="never"
        android:title="@string/menu_about"
        android:id="@+id/menu_about" />
    <item
        app:showAsAction="never"
        android:title="@string/menu_logout"
        android:id="@+id/menu_logout" />

</menu>