<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.AboutActivity"
    tools:showIn="@layout/activity_about">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/textLabelAbout"
                android:text="@string/label_about_name"/>

            <TextView
                style="@style/textDescriptionAbout"
                android:text="@string/about_app_name_value"/>

            <TextView
                style="@style/textLabelAbout"
                android:text="@string/label_about_version"/>

            <TextView
                style="@style/textDescriptionAbout"
                android:text="@string/about_version_value"/>

            <TextView
                style="@style/textLabelAbout"
                android:text="@string/label_about_description"/>

            <TextView
                style="@style/textDescriptionAbout"
                android:text="@string/about_description_value">
            </TextView>

            <TextView
                style="@style/textLabelAbout"
                android:text="@string/label_about_usage"/>

            <TextView
                android:text="@string/about_usage_value"
                style="@style/textDescriptionAbout"></TextView>

            <TextView
                style="@style/textLabelAbout"
                android:text="@string/label_about_widget"/>

            <TextView
                style="@style/textDescriptionAbout"
                android:text="@string/about_widget_value">
            </TextView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>