<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="@dimen/widget_margin">

   <LinearLayout
       android:visibility="gone"
       android:id="@+id/widget_cleaning_progress"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <TextView
           android:gravity="center"
           android:textColor="@color/textColorDark"
           android:text="@string/label_widget_cleaning_progress"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
       <Chronometer
           android:visibility="gone"
           android:layout_weight="2"
           android:id="@+id/widget_chronometer"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:background="@drawable/bg_chronometer"
           android:gravity="center"
           android:textColor="@color/textColorDark"
           android:textSize="15sp"
           android:textStyle="bold" />

       <Button
           android:layout_weight="1"
           android:id="@+id/bt_widget_finish_cleaning"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_marginEnd="8dp"
           android:background="@drawable/bg_button_stop"
           android:drawableStart="@drawable/ic_stop_black_24dp"
           android:paddingHorizontal="10dp"
           android:textColor="@color/textColor"
           android:textSize="12sp"
           android:text="@string/bt_finish_cleaning_label" />
   </LinearLayout>

   <LinearLayout
    android:background="@drawable/bg_list_item"
    android:id="@+id/widget_layout_read_qr_code"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
       <TextView
           android:gravity="center"
           android:textColor="@color/textColorDark"
           android:text="@string/label_widget"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/iv_widget_qr_code"
        android:scaleType="fitCenter"
        android:padding="2dp"
        android:background="@drawable/bg_list_item"
        android:src="@drawable/ic_icon_qr_code"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/cd_new_cleaning_icon">
    </ImageView>

   </LinearLayout>

</LinearLayout>